2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (activated_cb): Handle the case where VIEW
	corresponds to the queue.
	(starling_run): Connect ST->QUEUE_VIEW's "row-activated" signal to
	activated_cb.

2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_play_list_query): Fix order of
	parameters.
	* src/starling.c (starling_advance): If random mode is enabled and
	the play queue is non-empty, choose a random element from the play
	queue.

2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Rename field scale to
	position_slider and scale_sliding to user_seeking.  Update users.
	(scale_sliding_update): Rename from this...
	(user_seeking_update): ... to this.  Update users.
	(scale_button_released_cb): Rename from this...
	(position_slider_button_released_cb): ... to this.  Update users.
	(scale_button_pressed_cb): Rename from this...
	(position_slider_button_pressed_cb): ... to this.  Update users.

	(position_slider_button_pressed_cb): Don't assert
	that ST->POSITION_SLIDING is 0.  Instead, only set up the timeout if
	ST->POSITION_SLIDING is 0.
	Reported by Thomas Schwinge <tschwinge@gnu.org>.

2008-10-07  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (remove_cb): Remove tracks from the right play
	list.
	(clear_cb): Clear the library, if that is the selected tab, or the
	queue, if that is the selected tab.
	(clear_queue_cb): Remove function.
	(starling_run): Rename menu item "Clear play list" to "Clear list".

2008-10-07  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c (render): Account for that fact that S may be
	NULL.
	Reported by Thomas Schwinge <tschwinge@gnu.org>.

2008-10-07  Neal H. Walfield  <neal@gnu.org>

	* debian/control: Add libgstreamer-plugins-base0.10-dev and
	libhandoff-dev to Build-Depends.
	* README: Add libhandoff-dev build dependency.
	Reported by Thomas Schwinge <tschwinge@gnu.org>.

2008-10-07  Neal H. Walfield  <neal@gnu.org>

	* moko-type.h: New file.