@@ -1,5 +1,9 @@
 2008-10-20  Neal H. Walfield  <neal@gnu.org>
 
+	* src/starling.c (change_caption_format): Reformat dialog text.
+	
+2008-10-20  Neal H. Walfield  <neal@gnu.org>
+
 	* src/starling.c (activated_cb): Handle the case where VIEW
 	corresponds to the queue.
 	(starling_run): Connect ST->QUEUE_VIEW's "row-activated" signal to
